Got customized dashboard to work, IN PROGRESS

--- a/Neuronudge/templates/500.html
+++ b/Neuronudge/templates/500.html
@@ -3,5 +3,5 @@
 {% block content %}
 <h1>500 - Internal Server Error</h1>
 <p>Oops! Something went wrong on our side. Please try again later.</p>
-<p><a href="{{ url_for('views.dashboard') }}">Go back to Dashboard</a></p>
+<p><a href="{{ url_for('main.dashboard') }}">Go back to Dashboard</a></p>
 {% endblock %}
