--- a/Neuronudge/templates/change_password.html
+++ b/Neuronudge/templates/change_password.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Change Your Password</h1>
 
-<form method="POST" action="{{ url_for('views.change_password') }}" novalidate aria-describedby="password-instructions">
+<form method="POST" action="{{ url_for('main.change_password') }}" novalidate aria-describedby="password-instructions">
     {{ form.hidden_tag() }}
 
     <div id="password-instructions" class="form-help" style="margin-bottom: 1rem; color: #555; font-style: italic;">
@@ -48,6 +48,6 @@
     </div>
 
     <button type="submit" class="btn btn-primary" aria-label="Change Password">Update Password</button>
-    <a href="{{ url_for('views.profile') }}" class="btn btn-secondary" role="button" style="margin-left:1rem;">Back to Profile</a>
+    <a href="{{ url_for('main.profile') }}" class="btn btn-secondary" role="button" style="margin-left:1rem;">Back to Profile</a>
 </form>
 {% endblock %}
