--- a/Neuronudge/templates/task_detail.html
+++ b/Neuronudge/templates/task_detail.html
@@ -29,7 +29,7 @@
     {% endif %}
 </div>
 
-<a href="{{ url_for('views.dashboard') }}" class="btn btn-link mt-4">Back to Dashboard</a>
+<a href="{{ url_for('main.dashboard') }}" class="btn btn-link mt-4">Back to Dashboard</a>
 
 <script>
 document.getElementById('ai-send').addEventListener('click', async () => {
