--- a/Neuronudge/templates/403.html
+++ b/Neuronudge/templates/403.html
@@ -3,5 +3,5 @@
 {% block content %}
 <h1>403 - Access Forbidden</h1>
 <p>You don't have permission to access this resource.</p>
-<p><a href="{{ url_for('views.dashboard') }}">Go back to Dashboard</a></p>
+<p><a href="{{ url_for('main.dashboard') }}">Go back to Dashboard</a></p>
 {% endblock %}
