--- a/Neuronudge/templates/layout_adhd.html
+++ b/Neuronudge/templates/layout_adhd.html
@@ -66,16 +66,16 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('views.dashboard') }}">Neuronudge ADHD</a>
+            <a class="navbar-brand" href="{{ url_for('main.dashboard') }}">Neuronudge ADHD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('views.dashboard') }}">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('views.task_list') }}">Tasks</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('views.onboarding') }}">Preferences</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('views.profile') }}">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.task_list') }}">Tasks</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.onboarding') }}">Preferences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a></li>
                     <li class="nav-item"><a class="nav-link text-danger" href="{{ url_for('auth.logout') }}">Logout</a></li>
                 </ul>
             </div>
