--- a/Neuronudge/templates/dashboard_dyslexia.html
+++ b/Neuronudge/templates/dashboard_dyslexia.html
@@ -52,6 +52,9 @@
       <a href="{{ url_for('main.onboarding') }}" class="btn btn-lg btn-outline-info" aria-label="Update preferences">
         <i class="fa-solid fa-gear"></i> Preferences
       </a>
+      <a href="{{ url_for('main.dashboard_graphs') }}" class="btn btn-outline-primary ms-2">
+        <i class="bi bi-bar-chart"></i> Graphs
+      </a>
     </div>
 
     <!-- Task Overview Table -->
